samples/_failures_safe/1761208021_4f5393_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d9f4167.c: In function ‘main’:
./samples/SAFE/__tmp_1d9f4167.c:195:9: error: expected declaration or statement at end of input
  195 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_1d9f4167.c:195:9: error: expected declaration or statement at end of input
